@@ -141,6 +141,25 @@ not want arrows to be drawn.
   the origin, and then returning to the typesetting the picture.
 \end{command}
 
+\begin{command}{\pgfqboxsynced\marg{box number}}
+  This command works similarly to the |\pgfqbox| command. However,
+  before inserting the text in \meta{box number}, the current
+  coordinate transformation matrix is applied to the current canvas
+  transformation matrix (is it ``synced'' with this matrix, hence the
+  name).
+
+  Thus, this command basically has the same effect as if you first
+  called |\pgflowlevelsynccm| followed by |\pgfqbox|. However, this
+  command will use |\hskip| and |\raise| commands for the
+  ``translational part'' of the coordinate transformation matrix,
+  instead of adding the translational part to the current
+  canvas transformation matrix directly. Both methods have the same
+  effect (box \meta{box number} is translated where it should), but
+  the method used by |\pgfqboxsynced| ensures that hyperlinks are
+  placed correctly. Note that scaling and rotation will not (cannot,
+  even) apply to hyperlinks.
+\end{command}
+
 %%% Local Variables: 
 %%% mode: latex
 %%% TeX-master: "pgfmanual"
