@@ -1,4 +1,4 @@
-\ProvidesFileRCS $Header: /home/mojca/cron/mojca/github/cvs/pgf/pgf/generic/pgf/basiclayer/Attic/pgfcorepathconstruction.code.tex,v 1.1 2005/06/29 12:14:04 tantau Exp $
+\ProvidesFileRCS $Header: /home/mojca/cron/mojca/github/cvs/pgf/pgf/generic/pgf/basiclayer/Attic/pgfcorepathconstruction.code.tex,v 1.2 2005/09/30 07:14:03 tantau Exp $
 
 % Copyright 2005 by Till Tantau <tantau@cs.tu-berlin.de>.
 %
@@ -781,7 +781,7 @@
 % % One complete sine in the interval [0,\pi]
 % \pgfpathmoveto{\pgfpointorigin}
 % \pgfpathsine{\pgfpoint{1.57cm}{1cm}}
-% \pgfpathcosine{\pgfpoint{3.141cm}{0cmcm}}
+% \pgfpathcosine{\pgfpoint{3.141cm}{0cm}}
 
 \def\pgfpathsine#1{%
   {%
@@ -806,7 +806,7 @@
 % % One complete sine in the interval [0,\pi]
 % \pgfpathmoveto{\pgfpointorigin}
 % \pgfpathsine{\pgfpoint{1.57cm}{1cm}}
-% \pgfpathcosine{\pgfpoint{3.141cm}{0cmcm}}
+% \pgfpathcosine{\pgfpoint{3.141cm}{0cm}}
 
 \def\pgfpathcosine#1{%
   {%
